<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            style="@style/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_account" />

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal" >

            <TextView
                android:layout_column="0"
                android:layout_gravity="end"
                android:text="@string/name"
                style="@style/formItem" />

            <EditText
                android:id="@+id/nameInput"
                android:ems="10"
                android:inputType="textCapWords" />

            <TextView
                android:layout_column="0"
                android:layout_gravity="end"
                android:text="@string/second_name"
				style="@style/formItem" />
				
            <EditText
                android:id="@+id/secondNameInput"
                android:ems="10"
                android:inputType="textCapWords" />

            <TextView
                android:layout_column="0"
                android:layout_gravity="end"
                android:text="@string/password"
                style="@style/formItem" />

            <EditText
                android:id="@+id/passwordInput"
                android:ems="8"
                android:inputType="textPassword" />
            
            <TextView
                android:layout_column="0"
                android:layout_gravity="end"
                android:text="@string/date_of_birth"
                style="@style/formItem" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/datePickerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    bootstrapbutton:bb_icon_right="fa-calendar"
                    bootstrapbutton:bb_roundedCorners="true"
                    bootstrapbutton:bb_type="success" />

                <TextView
                    android:id="@+id/dateOfBirthText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_column="0"
                android:layout_gravity="end"
                android:text="@string/medical_record_no"
                style="@style/formItem" />

            <EditText
                android:id="@+id/medicalRecordNumberInput"
                android:ems="10"
                android:inputType="textCapCharacters" />
        </GridLayout>

        <CheckBox
            android:id="@+id/connectCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_to_account"
            android:textSize="12sp" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/selectDoctorsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/select_doctors"
            bootstrapbutton:bb_icon_right="fa-heart"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="info" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/register"
            bootstrapbutton:bb_icon_right="fa-check-circle"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="primary" />
    </LinearLayout>

</ScrollView>