<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="pl.coursera.mszarlinski.symptoms.activity.checkIn.DoesPainStopFromEatingActivity" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_eating_question"             
            style="@style/header" />

         <com.beardedhen.androidbootstrap.BootstrapButton
             	android:id="@+id/noneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/none"
                bootstrapbutton:bb_roundedCorners="true"
                bootstrapbutton:bb_icon_left="fa-thumbs-o-up"
                bootstrapbutton:bb_type="default" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/someButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/some"
                bootstrapbutton:bb_roundedCorners="true"
                bootstrapbutton:bb_icon_left="fa-thumbs-o-down"
                bootstrapbutton:bb_type="default" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/cantEatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cant_eat"
                bootstrapbutton:bb_roundedCorners="true"
                bootstrapbutton:bb_icon_left="fa-thumbs-down"
                bootstrapbutton:bb_type="default" />
            
             <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/next"
                bootstrapbutton:bb_roundedCorners="true"
                bootstrapbutton:bb_icon_right="fa-check"
                bootstrapbutton:bb_type="info" />
    </LinearLayout>

</ScrollView>