<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_throat_photo" 
            style="@style/header" />
        
        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/launch_camera"
            bootstrapbutton:bb_icon_right="fa-camera"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="primary" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/delete_photo"
            android:enabled="false"
            bootstrapbutton:bb_icon_right="fa-times"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="default" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/next"
            bootstrapbutton:bb_icon_right="fa-check"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="info" />
    </LinearLayout>

</ScrollView>