<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="pl.coursera.mszarlinski.symptoms.activity.checkIn.FinishCheckInActivity" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_check_in_question" 
            style="@style/header"/>

         <com.beardedhen.androidbootstrap.BootstrapButton
             	android:id="@+id/completeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/complete_check_in"
                bootstrapbutton:bb_roundedCorners="true"
                bootstrapbutton:bb_icon_right="fa-envelope"
                bootstrapbutton:bb_type="info" />

          <com.beardedhen.androidbootstrap.BootstrapButton
              android:id="@+id/cancelCheckinButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:text="@string/cancel_check_in"
              bootstrapbutton:bb_roundedCorners="true"
              bootstrapbutton:bb_icon_right="fa-ban"
              bootstrapbutton:bb_type="danger" />
    </LinearLayout>

</ScrollView>